deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: annuaire
spec:
  replicas: 1
  selector:
    matchLabels:
      app: annuaire
  template:
    metadata:
      labels:
        app: annuaire
    spec:
      containers:
        - name: annuaire
          image: mailinenguyen/annuaire
