ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: annuaire
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - annuaire.dev.insee.io
  rules:
    - host: annuaire.dev.insee.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: annuaire
                port:
                  number: 8080
